--- a/index.html
+++ b/index.html
@@ -82,16 +82,16 @@
 
     <div class="clients-slider swiper">
       <div class="swiper-wrapper align-items-center">
-        <div class="swiper-slide"><img src="assets/img/clients/Del siglo logo .png" class="" alt=""></div>
-        <div class="swiper-slide"><img src="assets/img/clients/La red logo.png" class="" alt=""></div>
-        <div class="swiper-slide"><img src="assets/img/clients/UNO SF logo.png" style="width: 120px;" class="" alt=""></div>
-        <div class="swiper-slide"><img src="assets/img/clients/UNO ER logo .png" style="width: 120px;" class="" alt=""></div>
-        <div class="swiper-slide"><img src="assets/img/clients/Recurso 2.png"  style="width: 220px;" class="" alt=""></div>
+        <div class="swiper-slide"><img src="assets/img/logos-color/Recurso 1.png" class="" alt=""></div>
+        <div class="swiper-slide"><img src="assets/img/logos-color/lared-color.png" class="" alt=""></div>
+        <div class="swiper-slide"><img src="assets/img/logos-color/unosantafe-color.png" style="width: 120px;" class="" alt=""></div>
+        <div class="swiper-slide"><img src="assets/img/logos-color/unoentrerios-color.png" style="width: 120px;" class="" alt=""></div>
+        <div class="swiper-slide"><img src="assets/img/logos-color/lacapi-negro.png"  style="width: 220px;" class="" alt=""></div>
         <div class="swiper-slide"><img src="assets/img/clients/" class="" alt=""></div>
-        <div class="swiper-slide"><img src="assets/img/clients/Recurso 12.png" style="width: 120px; margin-left: -110px;" class="" alt="" ></div>
-        <div class="swiper-slide"><img src="assets/img/clients/metropoli logo.png" style="width: 220px; margin-left: -110px;" class="" alt=""></div>
-        <div class="swiper-slide"><img src="assets/img/clients/LT8 logo.png" style="width: 110px; margin-left: -20px" class="" alt=""></div>
-        <div class="swiper-slide"><img src="assets/img/clients/UNA logo .png"  style="width: 110px; margin-left: -20px" class="" alt=""></div>
+        <div class="swiper-slide"><img src="assets/img/logos-color/fm90.3-color.png" style="width: 120px; margin-left: -110px;" class="" alt="" ></div>
+        <div class="swiper-slide"><img src="assets/img/logos-color/metropoli-color.png" style="width: 220px; margin-left: -110px;" class="" alt=""></div>
+        <div class="swiper-slide"><img src="assets/img/logos-color/lt8-color.png" style="width: 110px; margin-left: -20px" class="" alt=""></div>
+        <div class="swiper-slide"><img src="assets/img/logos-color/unaradio-color.png"  style="width: 110px; margin-left: -20px" class="" alt=""></div>
 
       </div>
     </div>
